--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,6 +24,7 @@ okhttp = "5.1.0"
 landscapist = "2.6.0"
 retrofit = "3.0.0"
 sandwich = "2.1.3"
+slidetounlock = "1.0.2"
 baselineprofile = "1.4.1"
 spotless = "6.21.0"
 androidxJunit = "1.2.1"
@@ -56,6 +57,7 @@ androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "
 androidx-startup = { group = "androidx.startup", name = "startup-runtime", version.ref = "androidxStartup" }
 compose-stable-marker = { group = "com.github.skydoves", name = "compose-stable-marker", version.ref = "composeStableMarker" }
 compose-effects = { module = "com.github.skydoves:compose-effects", version.ref = "composeEffects" }
+compose-slidetounlock = { module = "com.revenuecat.purchases:slide-to-unlock", version.ref = "slidetounlock" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-android-testing = { group = "com.google.dagger", name = "hilt-android-testing", version.ref = "hilt" }
