--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,27 @@
 [versions]
-agp = "8.12.0"
-kotlin = "2.2.20"
-purchases = "9.7.0"
+agp = "8.13.0"
+kotlin = "2.2.21"
+purchases = "9.12.1"
 activityCompose = "1.10.1"
-androidxComposeMaterial3 = "1.3.2"
+androidxComposeMaterial3 = "1.4.0"
 androidxComposeConstraintLayout = "1.1.1"
-androidxComposeNavigation = "2.9.4"
+androidxComposeNavigation = "2.9.5"
 androidxHiltNavigationCompose = "1.3.0"
-androidxLifecycle = "2.9.3"
+androidxLifecycle = "2.9.4"
 androidxProfileinstaller = "1.4.1"
 androidxCore = "1.17.0"
 androidxStartup = "1.2.0"
 androidxTest = "1.7.0"
-composeBom = "2025.09.00"
+composeBom = "2025.10.01"
 composeStableMarker = "1.0.7"
 composeEffects = "0.1.4"
 kotlinxCoroutines = "1.10.2"
 kotlinxSerializationJson = "1.9.0"
-ksp = "2.2.20-2.0.3"
+ksp = "2.3.0"
 googleSecretPlugin = "2.0.1"
-hilt = "2.57.1"
-okhttp = "5.1.0"
-landscapist = "2.6.0"
+hilt = "2.57.2"
+okhttp = "5.3.0"
+landscapist = "2.6.1"
 retrofit = "3.0.0"
 sandwich = "2.1.3"
 slidetounlock = "1.0.2"
