--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -21,6 +21,31 @@ jobs:
       - name: spotless
         run: ./gradlew spotlessCheck
 
+  test:
+    name: Unit Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v3.1.0
+      - name: Set up JDK
+        uses: actions/setup-java@v3.5.1
+        with:
+          distribution: zulu
+          java-version: 17
+      - uses: gradle/gradle-build-action@v2.7.1
+      - name: Make Gradle executable
+        run: chmod +x ./gradlew
+      - name: Run unit tests
+        run: ./gradlew testDebugUnitTest --stacktrace
+      - name: Upload test reports
+        if: always()
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-reports
+          path: |
+            **/build/reports/tests/
+            **/build/test-results/
+
   build:
     runs-on: ubuntu-latest
     steps:
