--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ activityCompose = "1.10.1"
 androidxComposeMaterial3 = "1.4.0"
 androidxComposeConstraintLayout = "1.1.1"
 androidxComposeNavigation = "2.9.5"
+androidxNavigation3 = "1.0.0"
 androidxHiltNavigationCompose = "1.3.0"
 androidxLifecycle = "2.9.4"
 androidxProfileinstaller = "1.4.1"
@@ -40,6 +41,8 @@ junitKtx = "1.3.0"
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidxComposeNavigation" }
+androidx-navigation3-runtime = { group = "androidx.navigation3", name = "navigation3-runtime", version.ref = "androidxNavigation3" }
+androidx-navigation3-ui = { group = "androidx.navigation3", name = "navigation3-ui", version.ref = "androidxNavigation3" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation" }
 androidx-compose-foundation-layout = { group = "androidx.compose.foundation", name = "foundation-layout" }
 androidx-compose-animation = { group = "androidx.compose.animation", name = "animation" }
